# steering-hub

./: .gitignore  CLAUDE.md  README.md  docker-compose.yml  pom.xml
.kiro/settings/: lsp.json
.specify/memory/: constitution.md
docs/: architecture.md  steering-hub.pen
docs/sql/: init.sql  migration_001_similarity.sql  migration_002_version_status.sql  migration_003_repo_management.sql  migration_004_agent_tracking.sql  migration_004_category_hierarchy.sql  migration_005_query_log.sql  migration_006_stop_word.sql
specs/001-similarity-conflict-detection/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/002-version-history-search/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/003-repo-management/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/004-hierarchical-category-navigation/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/005-responsive-layout/: spec.md  tasks.md
steering-hub-backend/: Dockerfile  pom.xml
steering-hub-backend/app/: pom.xml
steering-hub-backend/application/: pom.xml
steering-hub-backend/bootstrap/: pom.xml
steering-hub-backend/common/: pom.xml
steering-hub-backend/compliance-service/: pom.xml
steering-hub-frontend/: index.html  package-lock.json  package.json  tsconfig.app.json  tsconfig.app.tsbuildinfo  vite.config.ts
steering-hub-mcp/: .env.example  README.md  mcp-config.json  pom.xml  pyproject.toml
steering-hub-mcp/src/steering_hub_mcp/: __init__.py  client.py  server.py
(+454 files in other folders)
