[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "steering-hub-mcp"
version = "1.0.0"
description = "MCP Server for Steering Hub - AI Coding Agent spec management"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "mcp>=1.0.0",
    "httpx>=0.27.0",
    "pydantic>=2.0.0",
    "python-dotenv>=1.0.0",
    "structlog>=24.0.0",
]

[project.scripts]
steering-hub-mcp = "steering_hub_mcp.server:main"

[tool.hatch.build.targets.wheel]
packages = ["src/steering_hub_mcp"]
